--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
         "ngx-markdown": "14.0.1",
         "ngx-quill": "18.0.0",
         "perfect-scrollbar": "1.5.5",
+        "primeicons": "^5.0.0",
+        "primeng": "^14.1.0",
         "quill": "1.3.7",
         "rxjs": "7.5.6",
         "tslib": "2.4.0",
