--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "apexcharts": "3.35.5",
         "crypto-js": "3.3.0",
         "highlight.js": "11.6.0",
+        "jspdf": "^2.5.1",
+        "jspdf-autotable": "^3.5.29",
         "lodash-es": "4.17.21",
         "moment": "^2.29.4",
         "ng-apexcharts": "1.7.1",
@@ -40,6 +42,7 @@
         "quill": "1.3.7",
         "rxjs": "7.5.6",
         "tslib": "2.4.0",
+        "xlsx": "^0.18.5",
         "zone.js": "0.11.8"
     },
     "devDependencies": {
